2005-03-25  Sven Neumann  <sven@gimp.org>

	* app/core/gimpmarshal.list: added VOID: OBJECT, OBJECT.

	* app/widgets/gimpview.[ch]: pass old and new viewable in the
	"set-viewable" signal.

	* app/widgets/gimptoolbox-image-area.c: don't add the XDS drag source
	more than once.

2005-03-25  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpdnd-xds.c (gimp_dnd_xds_save_image): in case of
	an error, answer with E (error) instead of F (failure).

2005-03-25  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpview.[ch]: virtualized GimpView::set_viewable.

	* app/widgets/gimptoolbox-image-area.c: hook into "set_viewable"
	and add an XDS drag source.

	* app/widgets/gimpdnd-xds.c
	* app/widgets/gimpdnd.c: unset the XdndDirectSave0 property when
	the drag ends, minor cleanups.

	* app/widgets/gimpimageview.c: removed unused function prototype.

2005-03-25  Sven Neumann  <sven@gimp.org>

	* app/widgets/Makefile.am
	* app/widgets/gimpdnd-xds.[ch]: new files.

	* app/widgets/gimpdnd.[ch]
	* app/widgets/widgets-enums.h: added a basic XDS (Direct Save
	Protocol) implementation.

	* app/widgets/gimpimageview.c: allow to save images by dragging
	them from the Images dialog to an XDS capable file manager.

2005-03-25  Kevin Cozens  <kcozens@cvs.gimp.org>

	* plug-ins/common/displace.c: Fixed off-by-one error in check for
	number of passed parameters.

2005-03-25  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimppropwidgets.[ch]: added
	gimp_prop_file_chooser_button_new(), a convenience constructor for
	GtkFileChooserButton.

	* libgimpwidgets/gimpwidgets.def: updated.

	* app/dialogs/preferences-dialog.c: use the new prop widget on the
	color management page.

2005-03-24  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* configure.in
	* plug-ins/common/screenshot.c: allow option of screenshot
	without decorations if libXmu is present (fixes bug #133626),
	clean up code a bit.

2005-03-24  Michael Natterer  <mitch@gimp.org>

	* app/core/core-enums.[ch]