@@ -1,3 +1,9 @@
+2005-03-25  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
+
+	* plug-ins/common/emboss.c: fix usage of RGBA data,
+	change to premultiplied alpha for embossing, hopefully
+	fixes bug #72864.
+
 2005-03-25  Sven Neumann  <sven@gimp.org>
 
 	* app/core/gimpmarshal.list: added VOID: OBJECT, OBJECT.
